--- a/style.css
+++ b/style.css
@@ -108,3 +108,15 @@ nav ul li a:hover::after{
     bottom: -8px;
     transition: 0.5;
 }
+.tab-links.active-link::after{
+    width: 50%;
+}
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+.tab-contents ul li span{
+    color: #b54769;
+    font-size: 14px;
+}
+
